--- a/pipeline/Jenkinsfile
+++ b/pipeline/Jenkinsfile
@@ -2,12 +2,12 @@ pipeline{
     agent any 
     scm checkout
     stages{
-        stage (build{
+        stage (build){
             steps{
                 sh '''
                 echo "Building the project..."
                 '''
             }
-        })
+        }
     }
 }
